# watchd

./: .gitignore  Cargo.toml  README.md  watchd.service
examples/: notification_dbus_monitor.rs
src/: air_quality_openaq.rs  calendar.rs  cobs.rs  communicator.rs  data_transfer.rs  fit.rs  garmin_json.rs  garmin_weather_api.rs  http.rs  lib.rs  main.rs  messages.rs  mlr.rs  protobuf_calendar.rs  types.rs  watchdog.rs  weather.rs  weather_bom.rs  weather_provider.rs
