[package]
name = "watchd"
version = "0.1.0"
edition = "2021"
authors = ["Alistair Francis <alistair@alistair23.me>"]
description = "Linux dameon to support Garmin watches and provide paired phone features"
license = "AGPL-3.0"

[dependencies]
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "time", "rt", "macros", "full", "tracing", "rt-multi-thread"] }
console-subscriber = "0.5"
bytes = "1.0"
bluer = { version = "0.17", features = ["bluetoothd"] }
clap = { version = "4.5", features = ["derive"] }
uuid = "1.0"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
flate2 = "1.0"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.0", features = ["full", "test-util"] }

[lib]
name = "garmin_v2_communicator"
path = "src/lib.rs"
